--- a/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -63,7 +63,7 @@
 
   <div class="acoes">
     <button (click)="criarPensamento()" class="botao">Salvar</button>
-    <button routerLink="/listarPensamento" class="botao">Cancelar</button>
+    <button (click)="cancelarPensamento()" class="botao">Cancelar</button>
   </div>
   </form>
 </section>
