--- a/src/app/components/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/components/pensamentos/pensamento/pensamento.component.html
@@ -6,7 +6,7 @@
     <button class="botao-editar">
       <img src="../../../assets/imagens/icone-editar.png" alt="Incone de Editar">
     </button>
-    <button class="botao-excluir">
+    <button class="botao-excluir" routerLink="/pensamentos/excluirPensamento/{{pensamento.id}}">
       <img src="../../../assets/imagens/icone-excluir.png" alt="Incone de excluir">
     </button>
   </div>
